2013-05-09 12:56-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXApplicationTarget.m: Set the product type in init.
	* PBXBundleTarget.m: Set the product type in init.
	* PBXCommon.h: Add GSXCCommon.h to the header.
	* PBXFrameworkTarget.m: Set the product type in init.

2013-05-09 12:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXApplicationTarget.h
	* PBXApplicationTarget.m
	* PBXBundleTarget.h
	* PBXBundleTarget.m
	* PBXFrameworkTarget.h
	* PBXFrameworkTarget.m: Add new classes to handle older files for
	these targets.

2013-05-09 12:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile
	* PBXNativeTarget.h
	* PBXNativeTarget.m: Add new method.

2013-05-07 19:58-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFrameworksBuildPhase.m: Use the gnustep-config script
	everywhere to allow us to automatically use the default
	compiler.
	* Tools/pcpg/PLCPG.m: Fix an issue where mutable dictionary
	was not used.

2013-05-06 02:14-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXAbstractBuildPhase.h
	* PBXAbstractBuildPhase.m: Added missing methods for property
	showEnvVarsInLog.

2013-05-06 01:55-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFileReference.m: -build, override buildPath pre-prending
	of project root in some cases.  This is likely due to differences
	in some versions of the xcodeproj format.

2013-05-04 20:38-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXNativeTarget.m
	* PBXResourcesBuildPhase.m: Fix issue with copying English.lproj

2013-04-24 02:39-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* NSString+PBXAdditions.h
	* NSString+PBXAdditions.m: Path manipulation methods.
	* PBXFileReference.m
	* PBXProject.m: Correct issue with handling older project files
	after last modification.

2013-04-20 23:16-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXContainerItemProxy.m
	* PBXFileReference.h